--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -15,7 +15,7 @@ body {
     font-size: 14px;
     font-weight: 300;
     color: #2F2F2F;
-    line-height: 1.5em;
+    line-height: 1.5rem;
     h1, h2, h3, h4, {
         font-family: Raleway, sans-serif;
     }
@@ -37,7 +37,7 @@ header {
     .logo {
         grid-area: logo;
         width: 100%;
-        max-width: 70%;
+        max-width: 25rem;
         margin: 0 auto;
     }
 // navigation
@@ -47,29 +47,18 @@ nav {
     padding: 0.7rem;
     .burgermenu {
         display: none;
-        color: white;
-        text-decoration: none;
-        &:hover{
-            color: @gold;
-        }
-        @media only screen and (max-width: 465px) {
-            display: block;
-        }
     }
     .desktop {
         display: flex;
         list-style: none;
         margin: 0 auto;
-        padding: 0;
-        @media only screen and (max-width: 465px) {
-            display: none;
-        }
+        padding: 0.5rem 0;
     }
     li {
-        font-size: 0.8em;
-        letter-spacing: 0.025em;
+        font-size: 1rem;
+        letter-spacing: 0.025rem;
         text-align: center;
-        padding: 0 1rem;
+        padding: 0 1.5rem;
         a {
             text-decoration: none;
             color: white;
@@ -92,20 +81,21 @@ nav {
 }
 // Hero image
 .main-top {
-    img {
-    max-width: 100%;
-    height: auto;
-    }  
+    width: 100%;
+    height: calc(100vw/2.5);
+    background-image: url("../images/inside-church.jpg");
+    background-size: cover;
+    background-position: center;
 }
 // Section Headers
 .heading {
-    margin: 2em auto;
+    margin: 2rem auto;
     color: #565656;
     border-top: 1px solid @gold;
     border-bottom: 1px solid @gold;
-    width: 23em;
+    width: 23rem;
     h2 {
-        font-size: 1.25em;
+        font-size: 1.25rem;
         text-align: center;
     }
     i {
@@ -115,11 +105,11 @@ nav {
 }
 // Upcoming Events
 .events-container {
-    margin: 5em 4em;
+    padding: 2rem 2rem;
     .event-grid-wrap {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);        
-        grid-column-gap: 2em;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 2rem;
         .event-card {
             img {
                 width: 100%;
@@ -127,7 +117,7 @@ nav {
                 object-fit: cover;
             }
             background-color: @beige;
-            padding: 1em;
+            padding: 1rem;
             border: solid 1px @beige;
             position: relative;
             &:hover {
@@ -137,17 +127,17 @@ nav {
         }
         .article-title {
             h3 {
-                font-size: 1.1em;
-                margin-bottom: 0.25em;
+                font-size: 1.1rem;
+                margin-bottom: 0.25rem;
             }
             h5 {
-                font-size: 0.75em;
+                font-size: 0.75rem;
                 margin-top: 0;
                 font-weight: 300;
             }
         }
         .readmore {
-            font-size: 0.8em;
+            font-size: 0.8rem;
             color: @gold;
         }
     }    
@@ -156,20 +146,20 @@ nav {
 .support-container {
     background-image: url("../images/support-back.jpg");
     background-size: cover;
-    padding: 2em;
+    margin-top: 2rem;
+    padding: 3rem;
     position: relative;
     animation: mymove 3s;
     transition: linear 3s;
     h1 {
         color: white;
-        font-size: 1.5em;
+        font-size: 1.5rem;
         text-align: center;
     }
     .support-buttons {
         display: grid;
-        grid-template-columns: 15% repeat(2, 1fr) 15%;
-        grid-column-gap: 2em;
-        margin-bottom: 2em;
+        grid-template-columns: 10% repeat(2, 1fr) 10%;
+        grid-column-gap: 2rem;
     }
     .join {
         grid-column-start: 2;
@@ -188,28 +178,29 @@ nav {
             color: @heading-text;     
         }
         i {
-            font-size: 1.5em;
+            font-size: 1.5rem;
         }
         p {
             margin: 1em 0 0 0;
             font-family: Raleway, sans-serif;
-            font-size: 0.9em;
-            letter-spacing: 0.02em;
+            font-size: 0.9rem;
+            letter-spacing: 0.02rem;
         }
     }
 }
 // Readings for the week
 .readings-container {
-    padding: 4em;
+    padding: 3rem;
     background-color: rgba(255, 255, 255, 0.9);
     background-image: url("../images/reading.jpg");
     background-size: cover;
     .readings {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        margin-bottom: 2em;
+        display: flex;
+        width: 80%;
+        margin: 0 auto;
         .card {
             margin: 0 auto;
+            padding: 1rem 0;
             h4 {
                 font-weight: 600;
                 color: @blue;
@@ -220,36 +211,38 @@ nav {
 }
 // Mass Schedule
 .sched-container {
-    padding: 4em;
+    padding: 2rem;
     .schedule {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 1em;
+        grid-column-gap: 1rem;
         background-color: @beige;
         .img-mass {
-            img {
-                width: 100%;
-            }
+            width: 100%;
+            height: calc(100vh/2);
+            background-image: url("../images/masstimes.jpg");
+            background-size: cover;
+            background-position: center;
         }
         .mass-text {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding: 0 1.5em;
+            padding: 0 1.5rem;
             h4 {
                 color: @gold;
-                margin: 1.5em 0 0.25em 0;
+                margin: 1.5rem 0 0.25rem 0;
             }
             p {
                 margin: 0;
-                padding-bottom: 0.5em;
+                padding-bottom: 0.5rem;
             }
         }
     }
 }
 // Footer
 footer {
-    font-size: 0.8em;
+    font-size: 0.8rem;
     .footer-top {
         display: grid;
         grid-template-columns: 10% repeat(2,1fr) 10%;
@@ -264,10 +257,10 @@ footer {
             margin: 0 auto;
             .button {
                 text-align: center;
-                padding: 0 3em;
-                margin: 1em 0;
+                padding: 0 3rem;
+                margin: 1rem 0;
                 border: solid 1px white;
-                border-radius: 0.5em;
+                border-radius: 0.5rem;
                 background-color: rgba(255, 253, 249, 0.2);
                 &:hover {
                     background-color: @orange;
@@ -278,24 +271,25 @@ footer {
     .poweredby, .copyright {
         background-color: rgb(180, 180, 180);
         text-align: center;
-        font-size: 0.75em;
+        font-size: 0.75rem;
+        padding: 0.5rem 0;
+        .img-container {
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            grid-column-gap: 2rem;
+            margin: 0 auto;
+            .netlify {
+                grid-column-start: 4;
+            }
+            img {
+                height: 2.5rem;
+                vertical-align: middle;
+            }
+        }
         p {
             margin: 0 auto;
-            padding: 1.5em; 
+            padding: 1rem; 
         }
-    }
-    .img-container {
-        display: grid;
-        grid-template-columns: repeat(9, 1fr);
-        grid-column-gap: 2em;
-        margin: 0 auto;
-        .netlify {
-            grid-column-start: 4;
-        }
-        img {
-            height: 3.5em;
-            vertical-align: middle;
-        }
-    }
+    }   
 }
 
