fixed size hero image

--- a/resources/css/media-queries.less
+++ b/resources/css/media-queries.less
@@ -1,5 +1,6 @@
 @smartphone: ~"only screen and (max-width: 740px)";
 @tablet: ~"only screen and (min-width: 741px) and (max-width: 960px)";
+@large-desktop: ~"only screen and (max-width: 1401px)";
 @blue: #404077;
 @orange: #FF8229;
 @heading-text: #565656;
