--- a/resources/css/media-queries.css
+++ b/resources/css/media-queries.css
@@ -6,7 +6,7 @@
     display: none;
   }
   header .logo {
-    max-width: 18rem;
+    max-width: 15rem;
   }
   nav .desktop {
     display: none;
@@ -18,6 +18,7 @@
   nav .burgermenu a {
     color: white;
     text-decoration: none;
+    font-size: 0.9rem;
   }
   nav .burgermenu a:hover {
     color: #F2B350;
@@ -28,15 +29,29 @@
   .main-top {
     min-height: 25rem;
   }
+  .heading {
+    margin: 2rem auto;
+    width: 90%;
+    max-width: 70%;
+  }
+  .events-container {
+    padding: 2rem 0;
+  }
   .events-container .event-grid-wrap {
     display: block;
   }
   .events-container .event-card {
-    margin-bottom: 2rem;
+    width: 80%;
+    max-width: 60%;
+    margin: 1rem auto;
+  }
+  .events-container .event-card .img-event {
+    margin: 0 auto;
   }
   .support-container .support-buttons {
     display: block;
-    width: 80%;
+    width: 60%;
+    max-width: 40%;
     margin: 0 auto;
   }
   .support-container .support-buttons .join {
@@ -52,10 +67,14 @@
     border-bottom: 1px solid #F2B350;
   }
   .sched-container {
-    margin: 2rem 0;
+    margin: 2rem auto;
   }
   .sched-container .schedule {
     display: block;
+    margin: 0 auto;
+  }
+  .sched-container .schedule .img-mass {
+    max-height: 15rem;
   }
   .sched-container .schedule .mass-text {
     padding: 2rem;
@@ -71,22 +90,31 @@
   }
   footer .poweredby .img-container {
     display: flex;
-    align-items: center;
+    width: 100%;
     justify-content: center;
   }
   footer .poweredby .img-container img {
-    height: 2rem;
-    padding: 0 1rem;
+    height: 1.5rem;
+    padding-right: 0.5rem;
   }
 }
-@media only screen and (min-width: 741px) and (max-width: 960px) {
-  header .logo {
-    max-width: 20rem;
-  }
+@media only screen and (min-width: 741px) {
   .readings-container .readings {
     display: grid;
     width: 100%;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 1.5rem;
+  }
+  .support-container .support-buttons {
+    max-width: 60rem;
+    margin: 0 auto;
+  }
+}
+@media only screen and (min-width: 1401px) {
+  .sched-container {
+    width: 50%;
+  }
+  .sched-container .schedule .img-mass {
+    max-width: 25rem;
   }
 }
