--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -33,11 +33,12 @@ header {
         grid-area: fb;
         color: @blue;
         margin: 0 auto;
+        font-size: 1.2rem;
     }
     .logo {
         grid-area: logo;
         width: 100%;
-        max-width: 15rem;
+        max-width: 20rem;
         margin: 0 auto;
     }
 // navigation
@@ -55,7 +56,7 @@ nav {
         padding: 0.5rem 0;
     }
     li {
-        font-size: 0.9rem;
+        font-size: 1.1rem;
         letter-spacing: 0.025rem;
         text-align: center;
         padding: 0 1.5rem;
@@ -211,7 +212,7 @@ nav {
 }
 // Mass Schedule
 .sched-container {
-    padding: 2rem;
+    margin: 2rem auto;
     .schedule {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -228,7 +229,7 @@ nav {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            padding: 0 1.5rem;
+            padding: 1.5rem;
             h4 {
                 color: @gold;
                 margin: 1.5rem 0 0.25rem 0;
@@ -242,7 +243,7 @@ nav {
 }
 // Footer
 footer {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     .footer-top {
         display: grid;
         grid-template-columns: 10% repeat(2,1fr) 10%;
@@ -256,6 +257,7 @@ footer {
         .button-footer {
             margin: 0 auto;
             .button {
+                font-size: 1rem;
                 text-align: center;
                 padding: 0 3rem;
                 margin: 1rem 0;
